# nbfixme

./: README.md  pyproject.toml
extras/: notebook-broken.ipynb
