[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "nbfixme"
version = "0.0.1"
requires-python = ">=3.8"
description = "Utility to fix basic notebook validation errors"
keywords = ["jupyter", "notebook", "nbformat", "validation", "utility"]
authors = [{ "name" = "furechan", "email" = "furechan@xsmail.com" }]
urls = { "homepage" = "https://github.com/furechan/nbfixme" }
readme = "README.md"
license = { text = "MIT" }
dependencies = ["click"]
optional-dependencies.dev = ["ipykernel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.scripts]
nbfixme = "nbfixme:main"

[tool.hatch.build]
dev-mode-dirs = ["src"]
sources = ["src"]
include = ["src"]
exclude = [".*"]


[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests", ]

