[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbfixme"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
description = "Utility to fix basic notebook validation errors"
keywords = ["jupyter", "notebook", "nbformat", "validation", "utility"]
authors = [{ "name" = "furechan", "email" = "furechan@xsmail.com" }]
urls = { "homepage" = "https://github.com/furechan/nbfixme" }
dependencies = ["click"]
optional-dependencies.dev = ["ipykernel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
nbfixme = "nbfixme:main"

[tool.hatch.build]
targets.wheel.sources = ["src"]
dev-mode-dirs = ["src"]
only-include = ["src"]
exclude = [".*"]

[tool.pydev]
allow-publish = true

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]

